--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ a:hover {
 }
 
 ::-moz-selection {
-	color: white; 
+	color: white;
 	background: #1A6DBB;
 }
 
 ::selection {
-	color: white; 
+	color: white;
 	background: #1A6DBB;
 }
 
@@ -80,20 +80,41 @@ a:hover {
 	transition: 0.3s;
 }
 
+.hovergallery img{
+-webkit-transform:scale(0.9); /*Webkit: уменьшаем размер до 0.8*/
+-moz-transform:scale(0.9); /*Mozilla: масштабирование*/
+-o-transform:scale(0.9); /*Opera: масштабирование*/
+-webkit-transition-duration: 0.5s; /*Webkit: длительность анимации*/
+-moz-transition-duration: 0.5s; /*Mozilla: длительность анимации*/
+-o-transition-duration: 0.5s; /*Opera: длительность анимации*/
+opacity: 0.9; /*Начальная прозрачность изображений*/
+margin: 0 20px 10px 0; /*Интервалы между изображениями*/
+}
+
+.hovergallery img:hover{
+-webkit-transform:scale(2); /*Webkit: увеличиваем размер до 2x*/
+-moz-transform:scale(2); /*Mozilla: масштабирование*/
+-o-transform:scale(2); /*Opera: масштабирование*/
+box-shadow:0px 0px 30px gray; /*CSS3 тени: 30px размытая тень вокруг всего изображения*/
+-webkit-box-shadow:0px 0px 30px gray; /*Webkit: тени*/
+-moz-box-shadow:0px 0px 30px gray; /*Mozilla: тени*/
+opacity: 1;
+}
+
 @media (max-width: 360px) {
 	.intro {
 		margin: 50px 0 50px 0;
 	}
-	
+
 	.intro span {
 		font-size: 18px;
 		line-height: 28px;
 	}
-	
+
 	img{
 		display: none;
 	}
-	
+
 	table {
 		float: none;
 	}
